Добавлена кнопка отправки сообщений, по которой отправляется сообщение юзера (пока без инпута), + ответ бота

--- a/static_src/index.html
+++ b/static_src/index.html
@@ -7,7 +7,7 @@
     <title>React messenger</title>
 </head>
 <body>
-    <div id="textblock">nertrgrt</div>
+    <div id="root"></div>
     
 </body>
 <script src="../static/build/app.js"></script>
